src/objects/ProductFeature__c.object
<CustomObject>
    <fields>
        <fullName>AlternateCode2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AlternateCode2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AlternateCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_PMDI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether it is created by PMDI batch jobs</description>
        <label>Created by PMDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDP_ActiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP_ActiveStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP_LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP_LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FeatureItemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>FeatureItemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feature_Commercial_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Feature Commercial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Feature_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Feature 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Feature_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Feature 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_DS_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DS Feature?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ItemId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ItemType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastupdate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lastupdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LifeCycleStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LifeCycleStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAdditionalInformation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAdditionalInformation</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSNClassification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNClassification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNFocalPointId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNFocalPointId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLegacyFeatureId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLegacyFeatureId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLegacyNcmCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLegacyNcmCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLegacyRevision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLegacyRevision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLicenced__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLicenced</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNNameInCustomerNetwork__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNNameInCustomerNetwork</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSummary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSummary</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSN_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDMModified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDMModified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PDMTimestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDMTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vault</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ProductFeature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Feature_Commercial_Number__c</columns>
        <columns>Description__c</columns>
        <columns>NSNFocalPointId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DS_Product_Features</fullName>
        <columns>NAME</columns>
        <columns>Feature_Commercial_Number__c</columns>
        <columns>Description__c</columns>
        <columns>NSNFocalPointId__c</columns>
        <columns>Is_DS_Feature__c</columns>
        <columns>Filter_Feature_1__c</columns>
        <columns>Filter_Feature_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_DS_Feature__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DS Product Features</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>ProductFeatures Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductFeatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>